--- a/OryzaVite/src/App.css
+++ b/OryzaVite/src/App.css
@@ -3,6 +3,11 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+    padding-top: 60px; /* evita sobreposição com o header */
+}
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .logo {
