--- a/OryzaVite/src/App.css
+++ b/OryzaVite/src/App.css
@@ -1,47 +1,59 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-    padding-top: 60px; /* evita sobreposição com o header */
-}
-body {
+  display: flex;
+  height: 100vh;
   margin: 0;
+  justify-content: center;
+}
+
+.bemvindo {
+  margin: 130px 400px;
+  flex: 0 0 5%;
   padding: 0;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  margin: 20px 0 0 -30px;
+  max-width: 350px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.golden {
+  padding: 0;
+  width: 150px;
+  height: auto;
+  flex: 1;
+  object-fit: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.bemvindo input {
+  font-size: 16px;
+  padding: 11px;
+  margin-top: 15px;
+  width: 250px;
+  border: 1px solid #e0e0e0; /* Adiciona borda cinza claro */
 }
 
-.card {
-  padding: 2em;
+/* Estilo para o botão de login */
+.login-button {
+  background-color: #005995;
+  color: white;
+  font-size: 16px;
+  padding: 8px 117px;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: background-color 0.3s ease;
 }
 
-.read-the-docs {
-  color: #888;
+.login-button:hover {
+  background-color: #003050;
+}
+
+/* Ajuste para adicionar espaço entre os grupos de input */
+.bemvindo .input-group {
+  
+  margin-bottom: 15px;
+  border:#fff;
 }
