--- a/OryzaVite/src/index.css
+++ b/OryzaVite/src/index.css
@@ -1,4 +1,7 @@
 :root {
+  /* altura do header fixo */
+  --header-h: 60px;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
